ci-logs/step4/run-28582010830/gtk-setup.log
The Meson build system
Version: 1.11.1
Source dir: /Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-src
Build dir: /Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-build
Build type: cross build
Project name: gtk
Project version: 4.22.4
C compiler for the host machine: /Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang (clang 17.0.0 "Apple clang version 17.0.0 (clang-1700.0.13.5)")
C linker for the host machine: /Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang ld64 1167.5
C compiler for the build machine: cc (clang 17.0.0 "Apple clang version 17.0.0 (clang-1700.0.13.5)")
C linker for the build machine: cc ld64 1167.5
Build machine cpu family: aarch64
Build machine cpu: aarch64
Host machine cpu family: aarch64
Host machine cpu: aarch64
Target machine cpu family: aarch64
Target machine cpu: aarch64
Checking if "macOS SDK version >= 10.15" compiles: NO 

gtk-src/meson.build:145:4: ERROR: Problem encountered: macOS SDK 10.15 or newer is required to build GTK

A full log can be found at /Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-build/meson-logs/meson-log.txt
::group::==== CI platform detected, click here for meson-log.txt contents. ====
Build started at 2026-07-02T10:09:44.360220
Main binary: /opt/homebrew/opt/python@3.14/bin/python3.14
Build Options: -Dbuildtype=release -Ddefault_library=static -Dprefix=/Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/ios-out -Dwrap_mode=nofallback -Dx11-backend=false -Dwayland-backend=false -Dwin32-backend=false -Dmacos-backend=false -Dandroid-backend=false -Dbroadway-backend=true -Dmedia-gstreamer=disabled -Dprint-cpdb=disabled -Dprint-cups=disabled -Dvulkan=disabled -Dcloudproviders=disabled -Dsysprof=disabled -Dtracker=disabled -Dcolord=disabled -Daccesskit=disabled -Df16c=disabled -Dintrospection=disabled -Ddocumentation=false -Dman-pages=false -Dscreenshots=false -Dbuild-demos=false -Dbuild-testsuite=false -Dbuild-examples=false -Dbuild-tests=false --cross-file=/Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/cross-pfx.txt
Python system: Darwin
The Meson build system
Version: 1.11.1
Source dir: /Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-src
Build dir: /Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-build
Build type: cross build
Project name: gtk
Project version: 4.22.4
-----------
Detecting compiler via: `/Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang --version` -> 0
stdout:
Apple clang version 17.0.0 (clang-1700.0.13.5)
Target: arm64-apple-darwin24.6.0
Thread model: posix
InstalledDir: /Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
-----------
Running command: -x c -E -dM -
-----
-----------
Detecting linker via: `/Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -Wl,--version -arch arm64 -isysroot /Applications/Xcode_16.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS18.5.sdk -mios-version-min=17.0` -> 1
stderr:
ld: unknown options: --version 
clang: error: linker command failed with exit code 1 (use -v to see invocation)
-----------
-----------
Detecting Apple linker via: `/Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -Wl,-v -arch arm64 -isysroot /Applications/Xcode_16.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS18.5.sdk -mios-version-min=17.0` -> 0
stderr:
@(#)PROGRAM:ld PROJECT:ld-1167.5
BUILD 01:45:05 Apr 30 2025
configured to support archs: armv6 armv7 armv7s arm64 arm64e arm64_32 i386 x86_64 x86_64h armv6m armv7k armv7m armv7em
will use ld-classic for: armv6 armv7 armv7s i386 armv6m armv7k armv7m armv7em
LTO support using: LLVM version 17.0.0 (static support for 29, runtime is 29)
TAPI support using: Apple TAPI version 17.0.0 (tapi-1700.0.3.5)
-----------
Sanity check compiler command line: /Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -o sanity_check_for_c_cross.exe sanity_check_for_c.c -arch arm64 -isysroot /Applications/Xcode_16.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS18.5.sdk -mios-version-min=17.0 -c
Sanity check compile stdout:

-----
Sanity check compile stderr:

-----
Cannot run cross check
C compiler for the host machine: /Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang (clang 17.0.0 "Apple clang version 17.0.0 (clang-1700.0.13.5)")
C linker for the host machine: /Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang ld64 1167.5
-----------
Detecting archiver via: `/Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/ar --version` -> 1
stderr:
usage:  ar -d [-TLsv] archive file ...
	ar -m [-TLsv] archive file ...
	ar -m [-abiTLsv] position archive file ...
	ar -p [-TLsv] archive [file ...]
	ar -q [-cTLsv] archive file ...
	ar -r [-cuTLsv] archive file ...
	ar -r [-abciuTLsv] position archive file ...
	ar -t [-TLsv] archive [file ...]
	ar -x [-ouTLsv] archive [file ...]
-----------
-----------
Detecting compiler via: `cc --version` -> 0
stdout:
Apple clang version 17.0.0 (clang-1700.0.13.5)
Target: arm64-apple-darwin24.6.0
Thread model: posix
InstalledDir: /Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
-----------
Running command: -x c -E -dM -
-----
-----------
Detecting linker via: `cc -Wl,--version` -> 1
stderr:
ld: unknown options: --version 
clang: error: linker command failed with exit code 1 (use -v to see invocation)
-----------
-----------
Detecting Apple linker via: `cc -Wl,-v` -> 0
stderr:
@(#)PROGRAM:ld PROJECT:ld-1167.5
BUILD 01:45:05 Apr 30 2025
configured to support archs: armv6 armv7 armv7s arm64 arm64e arm64_32 i386 x86_64 x86_64h armv6m armv7k armv7m armv7em
will use ld-classic for: armv6 armv7 armv7s i386 armv6m armv7k armv7m armv7em
LTO support using: LLVM version 17.0.0 (static support for 29, runtime is 29)
TAPI support using: Apple TAPI version 17.0.0 (tapi-1700.0.3.5)
-----------
Sanity check compiler command line: cc -o sanity_check_for_c.exe sanity_check_for_c.c
Sanity check compile stdout:

-----
Sanity check compile stderr:

-----
Sanity check built target output for build machine c compiler
 -- Running test binary command:  /Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-build/meson-private/sanity_check_for_c.exe
-----------
Sanity check: `/Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-build/meson-private/sanity_check_for_c.exe` -> 0
 -- stdout:
 
 -- stderr:
 
 -- returncode: 0
C compiler for the build machine: cc (clang 17.0.0 "Apple clang version 17.0.0 (clang-1700.0.13.5)")
C linker for the build machine: cc ld64 1167.5
-----------
Detecting archiver via: `llvm-ar-17 --version` -> [Errno 2] No such file or directory: 'llvm-ar-17'
-----------
Detecting archiver via: `llvm-ar --version` -> [Errno 2] No such file or directory: 'llvm-ar'
-----------
Detecting archiver via: `ar --version` -> 1
stderr:
usage:  ar -d [-TLsv] archive file ...
	ar -m [-TLsv] archive file ...
	ar -m [-abiTLsv] position archive file ...
	ar -p [-TLsv] archive [file ...]
	ar -q [-cTLsv] archive file ...
	ar -r [-cuTLsv] archive file ...
	ar -r [-abciuTLsv] position archive file ...
	ar -t [-TLsv] archive [file ...]
	ar -x [-ouTLsv] archive [file ...]
-----------
Build machine cpu family: aarch64
Build machine cpu: aarch64
Host machine cpu family: aarch64
Host machine cpu: aarch64
Target machine cpu family: aarch64
Target machine cpu: aarch64
Running compile:
Working directory:  /Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-build/meson-private/tmpno0mh8t6
Code:

    #include <Availability.h>
    #if __MAC_OS_X_VERSION_MIN_REQUIRED < 101500L
    # error message "Minimal macOS SDK version not met"
    #endif
    
-----------
Command line: `/Applications/Xcode_16.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang /Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-build/meson-private/tmpno0mh8t6/testfile.c -o /Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-build/meson-private/tmpno0mh8t6/output.obj -c -arch arm64 -isysroot /Applications/Xcode_16.4.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS18.5.sdk -mios-version-min=17.0 -O0 -U_FORTIFY_SOURCE -Werror=implicit-function-declaration -Werror=unknown-warning-option -Werror=unused-command-line-argument -Werror=ignored-optimization-argument -std=gnu11` -> 1
stderr:
/Users/runner/work/Rayforge-iOS-ipa/Rayforge-iOS-ipa/gtk-build/meson-private/tmpno0mh8t6/testfile.c:4:7: error: message "Minimal macOS SDK version not met"
    4 |     # error message "Minimal macOS SDK version not met"
      |       ^
1 error generated.
-----------
Checking if "macOS SDK version >= 10.15" compiles: NO 

gtk-src/meson.build:145:4: ERROR: Problem encountered: macOS SDK 10.15 or newer is required to build GTK

::endgroup::

